--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
+    "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
@@ -30,6 +31,6 @@
 </head>
 <body class="bg-gray-50 min-h-screen">
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
