--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Outfit:wght@500;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-      body { font-family: 'Inter', sans-serif; }
-      h1, h2, h3 { font-family: 'Outfit', sans-serif; }
+      body { font-family: 'Ubuntu', sans-serif; }
+      h1, h2, h3, h4 { font-family: 'Ubuntu', sans-serif; font-weight: 700; }
       .bg-pokemon-red { background-color: #EE1515; }
       .bg-pokemon-blue { background-color: #3B4CCA; }
       .bg-pokemon-yellow { background-color: #FFDE00; }
